Correction overflow sur mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -56,7 +56,7 @@ body {
         & > .mobile-menu-container-header {
             width: 100%;
             text-align: right;
-            padding: 1.5rem 2.5rem;
+            padding: 1rem 2.5rem;
             height: 25%;
             font-size: 1.5rem;
         }
